--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,13 @@
 {
   "functions": {
-    "*.py": {
+    "app.py": {
       "runtime": "python3.9"
     }
   },
   "routes": [
-    { "src": "/(.*)", "dest": "app.py" }
+    { 
+      "src": "/(.*)", 
+      "dest": "app.py" 
+    }
   ]
 }
