--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,17 @@
 {
-  "functions": {
-    "app.py": {
-      "runtime": "python3.9"
+  "builds": [
+    {
+      "src": "app.py",
+      "use": "@vercel/python",
+      "config": {
+        "runtime": "python3.9"
+      }
     }
-  },
+  ],
   "routes": [
-    { 
-      "src": "/(.*)", 
-      "dest": "app.py" 
+    {
+      "src": "/(.*)",
+      "dest": "app.py"
     }
   ]
 }
