bugfix: fix vercel config json

--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,13 @@
 {
+  "build": {
+    "env": {
+      "PYTHON_VERSION": "3.9"
+    }
+  },
   "builds": [
     {
       "src": "app.py",
-      "use": "@vercel/python",
-      "config": {
-        "runtime": "python3.9"
-      }
+      "use": "@vercel/python"
     }
   ],
   "routes": [
